syntax = "proto3";

enum EchoRequestEnum {
  value = 0;
}

message EchoRequestSub {
  string messageSub = 1;
}

message EchoRequest {
  string message = 1;
  int32 int32 = 2;
  bool bool = 3;
  EchoRequestSub sub = 5;
  double double = 6;
  float float = 7;
  bytes bytes = 8;
  int64 int64 = 9;
  EchoRequestEnum enum = 10;
  fixed32 fixed32 = 11;
  fixed64 fixed64 = 12;
  uint32 uint32 = 13;
  uint64 uint64 = 14;
}

message RepeatedEchoRequest {
  repeated string message = 1;
  repeated int32 int32 = 2;
  repeated bool bool = 3;
  repeated EchoRequestSub sub = 5;
  repeated double double = 6;
  repeated float float = 7;
  repeated bytes bytes = 8;
  repeated int64 int64 = 9;
  repeated EchoRequestEnum enum = 10;
  repeated fixed32 fixed32 = 11;
  repeated fixed64 fixed64 = 12;
  repeated uint32 uint32 = 13;
  repeated uint64 uint64 = 14;
}

message ServerStreamingEchoRequest {
  string message = 1;
}

message EchoResponse {
  string messageBack = 1;
}

message ServerStreamingEchoResponse {
  string messageBack = 1;
}

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse);

  rpc ServerStreamingEcho(ServerStreamingEchoRequest)
      returns (stream ServerStreamingEchoResponse);
}
