syntax = "proto3";

package test.wkt;

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

message TestMessage {
  google.protobuf.Any any = 1;
  google.protobuf.Timestamp timestamp = 2;
  google.protobuf.Duration duration = 3;
}
